@@ -2,6 +2,8 @@ git-annex (5.20140222) UNRELEASED; urgency=medium
 
   * Fix handling of rsync remote urls containing a username,
     including rsync.net.
+  * --metadata field=value can now use globs to match, and matches
+    case insensatively, the same as git annex view field=value does.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 21 Feb 2014 13:03:04 -0400
 
